# qlik-cloud-console2

./: .gitignore  Dockerfile  README.md  apiOperacoes.py  app.py  comandos_docker.txt  exemple.env  pyproject.toml
